# at-spi

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  README.commits  at-spi.doap  at-spi.schemas.in  configure.in
at-bridge/: bridge.c
atk-bridge/: Makefile.am  atk-bridge.desktop.in  bridge.c
cspi/: spi-listener.h  spi-private.h  spi-util.c  spi.h  spi_accessible.c  spi_component.c  spi_editabletext.c  spi_event.c  spi_main.c  spi_registry.c
idl/: Accessibility_Accessible.idl  Accessibility_Relation.idl
libspi/: .gitignore  Makefile.am  accessible.c  accessible.h  application.c  application.h  base.h  collection.c  component.c  component.h  document.c  editabletext.c  editabletext.h  eventlistener.c  eventlistener.h  hyperlink.c  hyperlink.h  hypertext.c  hypertext.h  image.h  keystrokelistener.c  keystrokelistener.h  listener.h  registry.c  registry.h  relation.c  relation.h  selection.c  selection.h  table.c  table.h  text.c  text.h  util.c  value.h
login-helper/: .gitignore  Makefile.am
po/: .gitignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  (+36 more)
pyatspi/: .gitignore  ChangeLog  Makefile.am  __init__.py  __init__.py.in  accessible.py  pyatspi-corba.pth.in  registry.py
registryd/: .gitignore  Makefile.am  at-spi-registryd.desktop.in.in.in  desktop.h  deviceeventcontroller.c  (+3 more)
(+13 files in other folders)
